--- a/src/Sesile/MainBundle/Resources/views/Default/menu-mobile.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu-mobile.html.twig
@@ -57,7 +57,7 @@
                 <li><a href="{{ path("logout") }}"><span class="glyphicon glyphicon-off"></span> Déconnexion</a></li>
             </ul>
             {% else %}
-                <a class="btn btn-success" href="{{ path("login_check") }}">Connexion</a>
+                <a class="btn btn-success" href="{{ path("classeur") }}">Connexion</a>
             {% endif %}
         </li>
 
