--- a/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
@@ -189,6 +189,7 @@
                 <span>Désactivé</span>
             </label>
             {{ form_widget(form.enabled, {'attr': {'class': 'checkbox' }}) }}
+            {#{{ form_widget(form.enabled) }}#}
         </div>
         <br/>
         <br/>
