--- a/src/Sesile/MainBundle/Resources/views/Default/indexFrame.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/indexFrame.html.twig
@@ -19,9 +19,8 @@
                     <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
                     <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
 
-                    {% render url("delegations_all_list") %}
-                    <object id="winFirefoxPlugin" type="application/x-sharepoint" width="0" height="0"
-                            style="display: none;"></object>
+
+                    {#<object id="winFirefoxPlugin" type="application/x-sharepoint" width="0" height="0" style="display: none;"></object>#}
                     <div id="classeurs_a_valider">
                         <div class="titre_bloc_accueil">
                             <span class="glyphicon glyphicon-edit"></span>
@@ -31,7 +30,6 @@
                         <div id="classeur-a-valider">
                             <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
                         </div>
-                        {#{% render url("classeur_a_valider") %}#}
 
                     </div>
                     <div id="liste_classeurs">
