--- a/src/Sesile/MainBundle/Resources/views/Collectivite/edit.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/edit.html.twig
@@ -37,7 +37,7 @@
                     </div>
                     <div class="col-md-7 col-sm-4">
                         <div class="row">
-                            <div class="col-md-3"><img src="{{ asset("/uploads/logo_coll/" ~ app.session.get('logo')) }}" width="100%" /></div>
+                            <div class="col-md-3"><img src="{{ asset("/uploads/logo_coll/" ~ entity.image) }}" width="100%" /></div>
                         </div>
                     </div>
                 </div>
