--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -40,9 +40,9 @@
 
     <div id="gauche" class="hidden-xs">
         <a href="{{ path('index') }}">
-        <div id="logo">
+            <div id="logo">
                 <img src="{{ asset("/images/logos.svg") }}"/>
-        </div>
+            </div>
         </a>
         <a href="https://youtu.be/ms-YYoaU4PE" class="btn-video-maj" target="_blank"></a>
         <img id="separateur_logo" src="{{ asset("/images/gradient-sesile.png") }}"/>
@@ -115,7 +115,7 @@
 
 
             {% else %}
-                <a class="btn btn-success" href="{{ path("classeur") }}">Connexion</a>
+                <a class="btn btn-success" href="{{ path("classeur_dashboard") }}">Connexion</a>
             {% endif %}
         </div>
 
