--- a/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
@@ -88,7 +88,7 @@ var dropzone = new Dropzone("div#fichiers", {
     maxFiles: 1,
     dictMaxFilesExceeded: "Dans le cas d'un classeur de type Hélios le dépôt d'un seul fichier par classeur est autorisé.",
     maxFilesize: 128,
-    dictFileTooBig: "Dans le cas d'un classeur de type Hélios le fichier ne peut dépasser les 80 Mo.",
+    dictFileTooBig: "Dans le cas d'un classeur de type Hélios le fichier ne peut dépasser les 128 Mo.",
     acceptedFiles: ".xml",
     dictInvalidFileType: "Attention, seuls les fichiers xml sont acceptés"
     {% endif %}
@@ -153,18 +153,17 @@ function buttonModifRoutine() {
 
 }
 
+uploadedfiles['serverfilename'] = [];
 dropzone.on('success', function (file, response) {
-    $.each(response, function (serverfilename, originalname) {
-        $('#documentcontent').append("<input type='hidden' name='" + serverfilename + "' value='" + originalname + "'> ");
 
-        uploadedfiles[serverfilename] = originalname;
+//    $('#documentcontent').append("<input type='hidden' name='" + serverfilename + "' value='" + file.name + "'> ");
 
-    });
+    uploadedfiles['serverfilename'].push(file.name);
+
 });
 
 dropzone.on('complete', function (file) {
     uploadingfiles--;
-//    console.log('complete :' + uploadingfiles);
     if (uploadingfiles == 0) {
 
         addDocToCurrentClasseur(uploadedfiles);
@@ -297,7 +296,7 @@ dropzone.on("addedfile", function (file) {
         if (idfile == -1) {
             idfile = file.name;
         }
-
+console.log("id : " +  idfile);
 
         $.ajax(Routing.generate('show_document', {id:idfile }), {
             method: 'POST',
