--- a/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
@@ -18,6 +18,7 @@
     if ($("#type").val() == 2) {
         var dropzone = new Dropzone("div#fichiers", {
             url: "{{ oneup_uploader_endpoint('docs') }}",
+            paramName: "fileName",
             previewTemplate: '<div   class="dz-preview dz-file-preview" ><img class="dropzonefileicon" style="width: 5em; height: 5em; " /><div class="" style="width: 130px;" ><div  class="dz-filename"><span class="dropzonereducedfilename" data-dz-name></span> </div>' +
             '<div class="dz-size" data-dz-size></div></div> <div class="dz-progress"><span class="dz-upload" data-dz-uploadprogress></span></div>' +
             ' <div class="dz-success-mark"><span>✔</span></div> <div class="dz-error-mark"><span>✘</span></div>' +
@@ -27,7 +28,7 @@
             maxFiles: 1,
             dictMaxFilesExceeded: "Dans le cas d'un classeur de type Hélios le dépôt d'un seul fichier par classeur est autorisé.",
             maxFilesize: 128,
-            dictFileTooBig: "Dans le cas d'un classeur de type Hélios le fichier ne peut dépasser les 80 Mo.",
+            dictFileTooBig: "Dans le cas d'un classeur de type Hélios le fichier ne peut dépasser les 128 Mo.",
             acceptedFiles: ".xml",
             dictInvalidFileType: "Attention, seuls les fichiers xml sont acceptés"
 
@@ -36,6 +37,7 @@
     else {
         var dropzone = new Dropzone("div#fichiers", {
             url: "{{ oneup_uploader_endpoint('docs') }}",
+            paramName: "fileName",
             previewTemplate: '<div   class="dz-preview dz-file-preview" ><img class="dropzonefileicon" style="width: 5em; height: 5em; " /><div class="" style="width: 130px;" ><div  class="dz-filename"><span class="dropzonereducedfilename" data-dz-name></span> </div>' +
             '<div class="dz-size" data-dz-size></div></div> <div class="dz-progress"><span class="dz-upload" data-dz-uploadprogress></span></div>' +
             ' <div class="dz-success-mark"><span>✔</span></div> <div class="dz-error-mark"><span>✘</span></div>' +
@@ -74,7 +76,7 @@
 //            myDropzone.removeFile(file);
             dropzone.removeFile(file);
             $("#documentcontent").children("#" + file.idfilename).remove();
-//            console.log("#" + file.idfilename);
+            console.log(file);
             $('#Mybutton').attr('disabled', false);
             if (dropzone.getAcceptedFiles().length == 0) {
                 $('#Mybutton').attr('disabled', true);
@@ -101,7 +103,7 @@
 //            myDropzone.removeFile(file);
             dropzone.removeFile(file);
             $("#documentcontent").children("#" + file.idfilename).remove();
-            //console.log("#" + file.idfilename);
+            console.log(file);
             $('#Mybutton').attr('disabled', false);
             if (dropzone.getAcceptedFiles().length == 0) {
                 $('#Mybutton').attr('disabled', true);
@@ -114,11 +116,11 @@
     /*Fonction pour ajouter fichier dans le dropzone "classeur à valider"*/
 
     dropzone.on('success', function (file, response) {
-        $.each(response, function (serverfilename, originalname) {
-            file.idfilename = serverfilename.split('.')[0];
-            //console.log(file);
-            $('#documentcontent').append("<input type='hidden' name='" + serverfilename + "' id='" + file.idfilename + "' value='" + originalname + "'> ");
-        });
+        /*console.log(file);
+        console.log("Name : " + file.name);*/
+
+        idfilename = file.name.split('.')[0];
+        $('#documentcontent').append("<input type='hidden' name='serverfilename[]' id='" + idfilename + "' value='" + file.name + "'> ");
 
     });
 
