[Fix] Bug upload multi-files

--- a/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
@@ -153,12 +153,13 @@ function buttonModifRoutine() {
 
 }
 
-uploadedfiles['serverfilename'] = [];
 dropzone.on('success', function (file, response) {
+    $.each(response, function (serverfilename, originalname) {
+        $('#documentcontent').append("<input type='hidden' name='" + serverfilename + "' value='" + originalname + "'> ");
 
-//    $('#documentcontent').append("<input type='hidden' name='" + serverfilename + "' value='" + file.name + "'> ");
+        uploadedfiles[serverfilename] = originalname;
 
-    uploadedfiles['serverfilename'].push(file.name);
+    });
 
 });
 
