--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -604,5 +604,5 @@
         </script>
     </div>
     {#<object id="winFirefoxPlugin" type="application/x-sharepoint" style="position: absolute; top: 2000000 px; left: 2000000 px;"></object>#}
-    <object id="winFirefoxPlugin" type="application/x-sharepoint"></object>
+    {#<object id="winFirefoxPlugin" type="application/x-sharepoint"></object>#}
 {% endblock %}
