[Evo] #236 - Revoir le système d'appairage d'un certificat
 - ajout des Actions controller
 - ajout du front certificat.html.twig
 - modification liste user pour acces au certificat
 - modification style.css

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -755,6 +755,12 @@ select [name=user] {
 	font-weight: bold;
 }
 
+
+.cert_attr {
+	color: #6e6e6e;
+	font-weight: bold;
+	font-size: 1.1em;
+}
 .parc_avatar {
 	display: none !important;
 }
