[Evo] #530 - Indication de version non mise à jour

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -206,7 +206,7 @@
                         &nbsp; &ndash; &nbsp;
                         R&Eacute;ALIS&Eacute; PAR LE SICTIAM
                         &nbsp; &ndash; &nbsp;
-                        SESILE version 3.5
+                        SESILE version {{ sesile_version }}
                     </a>
                     </span>
             </div>
