[Fix] #502 - décocher les sélections des fichiers lors de l'affichage des visionneuses
 - Ajout du label pour une meilleure ergo
 - modification css du label
 - suppression code inutile

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1071,3 +1071,8 @@ select [name=user] {
 .statut_refuse, .statut_cours, .statut_finalise, .statut_retire, .statut_retracte {
 	display: none;
 }
+
+#form_a_valider label {
+	color: #000000;
+	font-weight: normal;
+}
