--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/signDocJws.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/signDocJws.html.twig
@@ -83,9 +83,10 @@
             <div class="row">
                 <div class="col-md-10">
                     <h3>
-                        <input type="checkbox" name="classeurs[]" class="chk" value="{{ classeur.id }}" checked>
-                        {#<input type="checkbox" class="classeur-id" name="classeurId[]" value="{{ classeur.id }}" checked>#}
-                        Classeur : {{ classeur.shortNom }}
+                        <label>
+                            <input type="checkbox" name="classeurs[]" class="chk" value="{{ classeur.id }}" checked>
+                            Classeur : {{ classeur.shortNom }}
+                        </label>
                     </h3>
                 </div>
                 <div class="col-md-2 text-right">
@@ -101,7 +102,6 @@
                     <ul class="etape_progress">
                         {% for doctosign in classeur.documents %}
                             <li class="document-{{ doctosign.id }}">
-                                {#<p class="status_classeur label-warning statut_refuse"><span class="glyphicon glyphicon-remove"> </span> document non signé</p>#}
                                 <span class="label label-warning statut_attente"></span>
                                 <p class="status_document statut_finalise"><span class="glyphicon statut_2"> </span> document signé</p>
                                 <strong>
@@ -143,7 +143,6 @@
 
     <div class="row">
         <div class="col-md-6">
-            {#<a class="btn btn-success btn-signature" href="#">Signer les documents</a>#}
             <button class="btn btn-success btn-signature"
                     {% if role is null %}
                 data-action="{{ path('jnlpSignerFilesFromPreview') }}";
@@ -161,7 +160,6 @@
 
 </div>
 
-{#<script type="text/javascript" src="https://www.java.com/js/deployJava.js"></script>#}
 <script type="text/javascript">
 
     // Délai de relance de la fonction ajax
@@ -198,30 +196,7 @@
         // On exécute la fonction pour tous les documents
         callDocumentAjax();
 
-        {#console.log("classeursId : {{ classeursId }}");#}
-
-        // Action au click du bouton de signature par lot
-        /*$(".btn-valider-signer").one('click', function () {
-            $("#form_a_valider").attr("action", $(this).attr("data-action")).submit();
-        });*/
-
-        /*var classeurId = [];
-        $( ".classeur-id" ).each(function( index ) {
-            classeurId.push($( this ).val());
-        });
-
-        console.log(JSON.stringify(classeurId));
-        console.log(encodeURIComponent(JSON.stringify(classeurId)));
-        */
-
         $(".btn-signature").one('click', function (e) {
-
-            {#window.location = "{{ path('jnlpSignerFiles', {id:classeursId,'role':role.id}) }}";#}
-            {#{% if role is null %}
-                window.location = "{{ path('jnlpSignerFiles',{'id':classeursId}) }}";
-            {% else %}
-                window.location = "{{ path('jnlpSignerFiles',{'id':classeursId,'role':role.id}) }}";
-            {% endif %}#}
 
             $("#form_a_valider").attr("action", $(this).attr("data-action")).submit();
 
