--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -24,9 +24,9 @@
         {% for passwordField in edit_form.plainPassword %}
             <div class="label_form label-form-input">
                 {% if loop.index  != 1 %}
-                    {{ form_label(passwordField, 'Confirmation') }}
+                    {{ form_label(passwordField) }}
                 {% else %}
-                    {{ form_label(passwordField, 'Mot de passe') }}
+                    {{ form_label(passwordField) }}
                 {% endif %}
                 {{ form_widget(passwordField) }}
             </div>
@@ -134,13 +134,13 @@
         <br/>
 
         <div class="label_form pickuser">
-            {{ form_label(edit_form.roles, 'Rôles') }}
+            {{ form_label(edit_form.userRole) }}
             {{ form_widget(edit_form.roles) }}
         </div>
         <br/>
         {% if is_granted('ROLE_SUPER_ADMIN') %}
             <div class="label_form pickuser">
-                {{ form_label(edit_form.collectivite, 'Collectivités') }}
+                {{ form_label(edit_form.collectivite) }}
                 {{ form_widget(edit_form.collectivite) }}
             </div>
         {% endif %}
