--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -21,7 +21,7 @@
 
                     <a href="#">
                         <div class="rectanglemenu" id="jauneclair"></div>
-                        D&eacute;l&eacute;gations<b class="caret carette"></b></a>
+                        Délégations<b class="caret carette"></b></a>
                 </div>
 
 
@@ -116,7 +116,8 @@
                 <div class="dd-toggle entete-menu">
                     <a href="#">
                         <div class="rectanglemenu" id="vertclair"></div>
-                        Administration<b class="caret carette"></b></a>
+                        Administration<b class="caret carette"></b>
+                    </a>
                 </div>
                 <ul class="dd-menu">
                     {% if not is_granted('ROLE_SUPER_ADMIN') %}
@@ -133,13 +134,14 @@
                             Message d'accueil
                         </a>
                     </li>
-                    {% endif %}
-                    {#<li>
-                        <a href="{{ path("gestion_circuit") }}">
+
+                    <li>
+                        <a href="{{ path("valid_classeur") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-                            Gestion des circuits
+                            Validité des classeurs
                         </a>
-                    </li>#}
+                    </li>
+                    {% endif %}
                     {% if is_granted('ROLE_SUPER_ADMIN') %}
                     <li>
                         <a href="{{ path("liste_type_classeur") }}">
@@ -161,32 +163,26 @@
                         </a>
                     </li>
 
-		    {#<li>
-			<a href="{{ path("services") }}">
-			    <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-			    Services organisationnels
-			</a>
-		    </li>#}
-            <li>
-                <a href="{{ path("servicesorg") }}">
-                    <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-                    {#Nouveaux #}Services organisationnels
-                </a>
-            </li>
-            {% if is_granted('ROLE_SUPER_ADMIN') %}
-                <li>
-                    <a href="{{ path("index_collectivite") }}">
-                        <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-                        Collectivités
-                    </a>
-                </li>
-                <li>
-                    <a href="{{ path("index_emailing") }}">
-                        <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-                        Emailing
-                    </a>
-                </li>
-            {% endif %}
+                    <li>
+                        <a href="{{ path("servicesorg") }}">
+                            <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
+                            {#Nouveaux #}Services organisationnels
+                        </a>
+                    </li>
+                    {% if is_granted('ROLE_SUPER_ADMIN') %}
+                        <li>
+                            <a href="{{ path("index_collectivite") }}">
+                                <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
+                                Collectivités
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path("index_emailing") }}">
+                                <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
+                                Emailing
+                            </a>
+                        </li>
+                    {% endif %}
                 </ul>
             </li>
             {% endif %}
